kubernetes-networks/ansible/roles/deploy_app/files/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-controllers
  namespace: homework
  labels:
    app: kubernetes-controllers
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: kubernetes-controllers
  template:
    metadata:
      labels:
        app: kubernetes-controllers
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.31.1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: mount
              mountPath: /homework
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          lifecycle:
                preStop:
                  exec:
                    command:
                    - /bin/sh
                    - -c
                    - rm -f /homework/index.html
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: mount
          emptyDir: {}
        - name: config
          configMap:
            name: nginx-default-conf
