kubernetes-networks/ansible/roles/deploy_app/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
  labels:
    app: homework
spec:
  type: ClusterIP
  selector:
    app: kubernetes-controllers
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  sessionAffinity: None
