kubernetes-networks/ansible/roles/deploy_app/files/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: homework
spec:
  gatewayClassName: traefik
  listeners:
    - name: homework
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
